# Game-of-life

./: CMakeLists.txt  README.md  default_field.live  fild_calc.hpp  game1.live  game2.live  game3.live  main  main.cpp  out_def_file_tick_200.live  out_game1_tick_9.live  parser.hpp  test  test.cpp
answers/: out_game1_tick_30_ans.live  out_game1_tick_9_ans.live
lib/: CMakeLists.txt  field_calculation.cpp  fild_calc.hpp  game_process.cpp  meta_data.cpp  parse_input_data.cpp  print_field.cpp
tests/: CMakeLists.txt  command.txt  live_test.cpp
